--- a/mui/uploadAvatar/index.html
+++ b/mui/uploadAvatar/index.html
@@ -9,10 +9,10 @@
     	.imgBox p { width: 100%; text-align: center; }
     	.imgBox p img { width: 200px; height: 200px; }
     </style>
-    <title>上传头像</title>
+    <title>选择照片</title>
 <body>
 	<div class="imgBox">
-		<button id="editAvatar">上传头像</button>
+		<button id="editAvatar">选择照片</button>
 		<p><img id="avatar" src="" /></p>
 	</div>
 
